# misc

./: .gitignore  build_rpms.sh  cache_evict  extract-methods.py  hydra.py
1password/: 1password_backup.py
arithmetic_eval/: ArithmeticEvaluator.cpp  ArithmeticEvaluator.h  CMakeLists.txt  README.md  main.cpp  test.cpp
arithmetic_eval/ArithmeticEval/: BuiltinFunctions.cpp  BuiltinFunctions.h  Evaluator.cpp  Evaluator.h  Exception.cpp  Exception.h  FunctionFactory.h  Functions.cpp  Functions.h  Interfaces.h  Node.h  Parser.cpp  Parser.h  Separator.h  Util.h  Value.h
arithmetic_eval/ng/: Parser.cpp  Parser.h
convolution/: CMakeLists.txt  README.md
convolution/c/: CMakeLists.txt  convolution.h
convolution/c/bootstrap/: CMakeLists.txt  bootstrap.h  filter.cpp  image.cpp  main.cpp
convolution/c/omp/: CMakeLists.txt  convolution.cpp
convolution/c/serial/: CMakeLists.txt  convolution.cpp
convolution/go/: CMakeLists.txt
convolution/go/convolution/: convolution.go  main.go
convolution/go/convolution/filter/: filter.go
convolution/go/convolution/image/: image.go
convolution/samples/: blur.matrix  edges.matrix
fedora/: review
fts3-load-balance/: test-dist.py
http2torrent/: http2torrent.py
int-encode/: Makefile  encode  encode.c
profiler/: CMakeLists.txt  profiler.hpp  test.cpp
trigger-gitlab-webhook/: trigger-gitlab-webhook.py
